# airflow-example

./: .ruffignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  format.yml  lint.yml  test.yml
dags/: GUIDE.md  adding_files.py  sync_s3.py
dags/01_basics/: README.md  basic_dag.py  tutorial_adding_files.py
dags/02_devops/: README.md  backup_automation.py  cicd_pipeline.py
dags/03_ml_pipelines/: README.md  model_training.py
dags/04_data_engineering/: etl_pipeline.py
dags/05_monitoring/: sla_monitoring.py
dags/06_notifications/: README.md  email_notifications.py  slack_notifications.py
dags/07_integrations/: aws_integration.py  database_integration.py
docs/: best-practices.md  getting-started.md  monitoring-guide.md
scripts/: validate_dags.py
test/: unittest.py
